--- a/index.html
+++ b/index.html
@@ -196,12 +196,24 @@
                 </div>
                 <div class="contacto-form">
                     <h3>Envíanos un mensaje</h3>
-                    <form>
-                        <input type="text" placeholder="Nombre completo" required>
-                        <input type="email" placeholder="Correo electrónico" required>
-                        <input type="text" placeholder="Asunto" required>
-                        <textarea placeholder="Mensaje" rows="5" required></textarea>
-                        <button type="submit" class="btn btn-primary">Enviar mensaje</button>
+                    <form name="contact" method="POST" data-netlify="true" netlify-honeypot="bot-field">
+                        <!-- Campo oculto para Netlify/Cloudflare -->
+                        <input type="hidden" name="form-name" value="contact">
+                        
+                        <!-- Honeypot para prevenir spam -->
+                        <p style="display: none;">
+                            <label>No llenes este campo: <input name="bot-field" /></label>
+                        </p>
+                        
+                        <input type="text" name="name" placeholder="Nombre completo" required>
+                        <input type="email" name="email" placeholder="Correo electrónico" required>
+                        <input type="tel" name="phone" placeholder="Teléfono">
+                        <input type="text" name="subject" placeholder="Asunto" required>
+                        <textarea name="message" placeholder="Mensaje" rows="5" required></textarea>
+                        <button type="submit" class="btn btn-primary">
+                            <i class="fas fa-paper-plane"></i>
+                            Enviar mensaje
+                        </button>
                     </form>
                 </div>
             </div>
