--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
                                 </div>
                                 <div>
                                     <h4>Asesor 1</h4>
-                                    <p class="asesor-name">Emilio Casares</p>
+                                    <p class="asesor-name">Ing. Sebastian Ontaneda O.</p>
                                 </div>
                             </div>
                             <div class="asesor-contacts">
@@ -439,7 +439,7 @@
                                 </div>
                                 <div>
                                     <h4>Asesor 2</h4>
-                                    <p class="asesor-name">Benjamín Lozada</p>
+                                    <p class="asesor-name">Mag. Santiago Robles</p>
                                 </div>
                             </div>
                             <div class="asesor-contacts">
