--- a/nosotros.html
+++ b/nosotros.html
@@ -22,7 +22,7 @@ fbq('init', '26537422319176155');
 fbq('track', 'PageView');
 </script>
 <noscript><img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=26537422319176155176155&ev=PageView&noscript=1"/></noscript>
+src="https://www.facebook.com/tr?id=26537422319176155&ev=PageView&noscript=1"/></noscript>
 <!-- End Facebook Pixel Base Code -->
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
